style.css
* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

:root {
	--first-color: #ffecd1;
	--second-color: #001524;
	--border-color: rgba(0, 0, 0, 0.2);
}

body {
	min-height: 100vh;
	font-family: "Montserrat", sans-serif;
	color: var(--second-color);
	background-color: var(--first-color);
}

header {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	height: 220px;
	margin-bottom: 40px;
}

header h1 {
	margin-bottom: 10px;
	font-size: 64px;
	font-weight: 200;
}

header p {
	font-size: 24px;
}

main {
	display: flex;
	justify-content: center;
	align-items: flex-start;
}

h2.title {
	margin-bottom: 30px;
	text-align: center;
	text-transform: uppercase;
	font-size: 36px;
	font-weight: 200;
}

.transactions {
	width: 1000px;
}

.transactions h3 {
	margin-bottom: 30px;
	font-size: 28px;
	text-align: center;
}

.transaction-list {
	display: flex;
}

.income-area,
.expenses-area {
	margin: 0 20px;
	padding: 30px;
	width: 50%;
	border: 1px solid var(--border-color);
}

.income-area h3,
.income-area .transaction-amount {
	color: rgb(19, 200, 108);
	font-weight: bold;
}

.expenses-area h3,
.expenses-area .transaction-amount {
	color: rgb(255, 104, 104);
	font-weight: bold;
}

.transaction {
	display: flex;
	justify-content: space-between;
	padding: 10px 0;
	border-bottom: 1px solid var(--border-color);
}

.transaction:last-child {
	border-bottom: none;
}

.transaction-name {
	font-size: 18px;
	text-transform: capitalize;
}

.transaction-name i {
	margin-right: 10px;
}

.delete {
	margin-left: 10px;
	background: none;
	border: none;
	font-size: 18px;
	cursor: pointer;
	transition: transform 0.3s;
}

.delete:hover {
	transform: scale(0.8);
}

.options {
	padding: 80px 40px;
	width: 500px;
}

.available-money {
	margin-top: -10px;
	text-align: center;
	font-size: 60px;
}

.controls {
	display: flex;
	justify-content: space-around;
	margin: 50px 0;
}

.controls button {
	padding: 12px 20px;
	color: var(--second-color);
	border: 1px solid var(--border-color);
	border-radius: 5px;
	background: none;
	cursor: pointer;
	transition: color 0.3s, background-color 0.3s;
}

.controls button:hover {
	color: var(--first-color);
	background-color: var(--second-color);
}

.controls i {
	margin-right: 10px;
}

.style-selection {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.color-buttons button {
	width: 50px;
	height: 50px;
	margin: 0 30px;
	border-radius: 50%;
	cursor: pointer;
	transition: transform 0.3s;
}

.color-buttons button:hover {
	transform: scale(0.9);
}

.color-buttons .light {
	background: var(--first-color);
	border: 1px solid var(--second-color);
}

.color-buttons .dark {
	background: var(--second-color);
	border: 1px solid var(--first-color);
}

.add-transaction-panel {
	/* display: flex; */
	display: none;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	color: white;
	background-image: linear-gradient(
		180deg,
		rgba(65, 21, 6, 1) 0%,
		rgba(120, 41, 15, 1) 62%
	);
}

.add-transaction-panel h2.title {
	margin-bottom: 0;
}

.add-transaction-panel label {
	margin-top: 40px;
	margin-bottom: 5px;
	font-size: 26px;
}

.add-transaction-panel small {
	margin-bottom: 15px;
	font-style: italic;
	color: #ddd;
}

.add-transaction-panel input,
.add-transaction-panel select {
	width: 800px;
}

.add-transaction-panel input,
.add-transaction-panel select,
.add-transaction-panel button {
	padding: 10px 20px;
	border: 1px solid black;
	border-radius: 5px;
}

.add-transaction-panel input,
.add-transaction-panel select,
.add-transaction-panel option {
	font-size: 18px;
}

.add-transaction-panel .panel-buttons {
	display: flex;
	justify-content: center;
	margin-top: 30px;
}

.add-transaction-panel button {
	margin: 0 30px;
	padding: 15px 40px;
	font-size: 18px;
	color: #fff;
	border: 1px solid #fff;
	background: none;
	cursor: pointer;
	transition: background-color .3s;
}

.add-transaction-panel button:hover {
background-color: rgb(66, 23, 9);
}

.panel-buttons i {
	margin-right: 10px;
}

